--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWorkProject.IoC/Project.UnitOfWorkProject.IoC.csproj
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWorkProject.IoC/Project.UnitOfWorkProject.IoC.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Project.UnitOfWorkProject.IoC</RootNamespace>
     <AssemblyName>Project.UnitOfWorkProject.IoC</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
